# PlexWatchlistMatcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  compare.py  config.py  db.py  images.py  main.py  models.py  plex.py  render.py  rooms.py
app/static/: app.css  app.js  plex-client.js  site.webmanifest
app/templates/: about.html  auth.html  base.html  index.html  linking.html  room.html
app/templates/partials/: card.html  row.html  status.html
doc/: PLAN.md  design-brief.md
scripts/: gen_og_image.py  gen_secrets.py
tests/: conftest.py  test_compare.py  test_flow.py
