[project]
name = "plexwatchlistmatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "pyrefly>=1.0.0",
    "pytest>=9.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
